# sekit

./: .gitignore  README.md  pyproject.toml  spartan  util.py
docs/: eio.md  jymatplot.md  search.md  spartan.md  stats.md
eio/: ParamEncoder.py  README.md  __init__.py  convert_param_to_list.py  eio.py  support_numpy.py  transform_param_value.py
eio/sample/: sample.py  sample1.py  sample2.py
eio/test/: test_eio.py
examples/: example_eio_1.py  example_eio_2.py  jymatplot_input_1.json  search_output.csv  spartan_command.py  spartan_gpu_command.py  spartan_gpu_input.yaml  spartan_input_1.yaml  spartan_input_2.yaml  stats_output.csv
examples/search_inputs/: command.py  sample,a=relu,hls=300,vf=0.1,_s=6400996.json  sample,a=relu,hls=500_500_500,vf=0.5,_s=5168185.json  sample,a=tanh,hls=300,vf=0.1,_s=8256549.json  search_inputs_param.yaml
jymatplot/: README.md  jymatplot
jymatplot/lib/: simple_matplot.py
jymatplot/samples/: sample1.json  sample1.yaml
lib/: _Cluster.py  _ComputeNode.py  _Spartan.py  _SshComputeNode.py  __init__.py  gen_param.py  load_json_or_yaml.py  load_yaml_or_json.py
sample/: busy_command.py  busy_input.yaml  input.json
search/: README.md  __init__.py  search  search.py  stats  stats.py
search/lib/: scatter.py  search.py  stats.py
search/sample/: command.py  sample_search.csv  sample_stats.csv
search/test/: sample_search.csv  test_search.py  (+3 more)
spartan/: README.md  spartan
test/: test_cluster.py  test_compute_node.py
tests/: conftest.py  test_eio.py  test_search.py  test_stats.py  test_utils.py
utils/: __init__.py  make_param_str.py
(+127 files in other folders)
